# 4isto_Life

./: .coverage  .gitignore  Dockerfile  README  README.md  app.py  docker-compose.yml  pyproject.toml  send_mess_viber.py  telegram_bot.py  viber_bot.py  views.py
nginx/site-enabled/: app
static/css/: main.css
static/js/: jquery.singlePageNav.min.js
templates/: base.html  calendar.html  contacts.html  done.html  get_price.html  index.html  order.html  prices.html  process.html
web/: .coverage  .env  Dockerfile  pyproject.toml
web/main_app/: __init__.py  telegram_bot.py
web/main_app/static/css/: main.css
web/main_app/static/js/: custom.js  jquery.singlePageNav.min.js
web/main_app/templates/: 404.html  500.html  base.html  contacts.html  get_price.html  index.html  order.html  process.html  request_send.html
web/tests/: .coverage  conftest.py  test_interface.py  test_views_functions.py
