[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["MattheusBy <mattaudia6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.2"
flask = "^2.2.2"
requests = "^2.28.1"
pyTelegramBotAPI = "^4.7.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
waitress = "^2.1.2"
pytest-flask = "^1.2.0"
pytest = "^7.2.0"
coverage = "^6.5.0"
bandit = "^1.7.4"
flake8 = "^6.0.0"
selenium = "^4.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
